--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,6 +35,11 @@
       background-position: center;  
       background-repeat: no-repeat;  
       min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
   }
   
      
@@ -208,3 +213,12 @@ button {
 .text-center {
     text-align: center;
 }
+/* .homeback {
+    background-color: aqua;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+} */
+ 
