--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,18 +35,25 @@
     padding: 5px 10px;
   }
   /* Page background */
-  body {
-      background-image: url('../images/c1823cdd5ea21aeda64de9aff88e96e0.jpg');
-      background-size: cover;  
-      background-position: center;  
-      background-repeat: no-repeat;  
-      min-height: 100vh;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-  }
+  html, body {
+    height: 100%; /* Ensure both html and body take up full viewport height */
+    margin: 0; /* Remove default margin */
+}
+
+body {
+    background-image: url('../images/c1823cdd5ea21aeda64de9aff88e96e0.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color:   #1C1C1C; /* Fallback gray color */
+    min-height: 100%; /* Ensure background covers the entire page */
+    display: flex;
+    flex-direction: column;
+}
+
+* {
+    box-sizing: border-box;
+}
   
      
   .nav-link a {
@@ -85,7 +92,7 @@
     width: 100%;
     max-width: 800px;
     margin-top: 10px;
-    background-color: rgba(128, 128, 128, 0.5); /* Gray with 50% transparency */
+    background-color:rgba(28, 28, 28, 0.5); /* Gray with 50% transparency */
     backdrop-filter: blur(5px); /* Optional: Apply blur effect to the background */
 }
 .card-body {
@@ -173,6 +180,7 @@ button.btn-primary:hover {
   justify-content: center;
   align-items: center;
   background-color: #000;
+  color : white ;
 }
 
 .forgot-password-card {
@@ -180,12 +188,13 @@ button.btn-primary:hover {
     max-width: 400px;
     width: 100%;
     border-radius: 10px;
-    background-color:rgba(128, 128, 128, 0.5);
+    background-color:rgba(28, 28, 28, 0.5);
     backdrop-filter: blur(5px); 
   }
   .card {
-    background-color:rgba(128, 128, 128, 0.5);
+    background-color:rgba(28, 28, 28, 0.5);
     backdrop-filter: blur(5px);
+    color : white;
   }
   /* ******** */
   /* Additional styles for AdminPanel */
