--- a/client/src/App.css
+++ b/client/src/App.css
@@ -228,14 +228,7 @@ button {
 .text-center {
     text-align: center;
 }
-/* .homeback {
-    background-color: aqua;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-} */
+
 .game-thumbnail {
     width: 100%;       /* Make image fill the width of its parent */
     height: 200px;     /* Set a fixed height */
@@ -263,4 +256,26 @@ button {
     visibility: visible; /* Show the description on hover */
     opacity: 1;
               /* Make the description fully opaque */
+}
+
+#bochra{
+    background-color: rgba(28, 28, 28, 0.5);
+}
+#gamelobby{
+    background-color: rgba(28, 28, 28, 0.5); 
+}
+.table-striped{
+    background-color: rgba(28, 28, 28, 0.5); 
+}/* styles.css */
+.table, .table th, .table td {
+    background-color: rgba(28, 28, 28, 0.5) !important;
+    color: white !important;
+}
+
+.table th {
+    text-align: center;
+}
+
+.table td {
+    text-align: left;
 }
